--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    env_file:
+      - .env.prod
     ports:
       - "3000:3000"
     environment:
@@ -20,6 +22,8 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    env_file:
+      - .env.prod
     ports:
       - "4000:4000"
     environment:
@@ -36,6 +40,8 @@ services:
     container_name: postgres
     image: postgres:latest
     restart: always
+    env_file:
+      - .env.prod
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
