--- a/compose.yaml
+++ b/compose.yaml
@@ -16,40 +16,40 @@ services:
     depends_on:
       - backend
     
-  backend:
-    container_name: backend
-    image: backend:latest
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    env_file:
-      - .env.prod
-    ports:
-      - "4000:4000"
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_HOST=${POSTGRES_HOST} #here also used host to connect with postgres docker svc
-      - DB_PORT=5432
-    restart: always
-    depends_on:
-      - postgres
+  # backend:
+  #   container_name: backend
+  #   image: backend:latest
+  #   build:
+  #     context: ./backend
+  #     dockerfile: Dockerfile
+  #   env_file:
+  #     - .env.prod
+  #   ports:
+  #     - "4000:4000"
+  #   environment:
+  #     - POSTGRES_USER=${POSTGRES_USER}
+  #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+  #     - POSTGRES_DB=${POSTGRES_DB}
+  #     - POSTGRES_HOST=${POSTGRES_HOST} #here also used host to connect with postgres docker svc
+  #     - DB_PORT=5432
+  #   restart: always
+  #   depends_on:
+  #     - postgres
 
-  postgres:
-    container_name: postgres
-    image: postgres:latest
-    restart: always
-    env_file:
-      - .env.prod
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+#   postgres:
+#     container_name: postgres
+#     image: postgres:latest
+#     restart: always
+#     env_file:
+#       - .env.prod
+#     environment:
+#       - POSTGRES_USER=${POSTGRES_USER}
+#       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+#       - POSTGRES_DB=${POSTGRES_DB}
+#     volumes:
+#       - postgres_data:/var/lib/postgresql/data
+#     ports:
+#       - "5432:5432"
 
-volumes:
-  postgres_data:
+# volumes:
+#   postgres_data:
